fea(backend): add JWT token generation, validation and auth middlware
