# cmd/api/tasks.go
@@ -23,6 +23,7 @@ type createTaskPayload struct {
 //	@Success		201		{object}	map[string]interface{}	"Created tasks with count"
 //	@Failure		400		{object}	map[string]string		"Invalid request"
 //	@Failure		500		{object}	map[string]string		"Internal server error"
+//	@Security		ApiKeyAuth
 //	@Router			/tasks [post]
 func (app *application) createBatchTasksHandler(w http.ResponseWriter, r *http.Request) {
 	var payloads []createTaskPayload
@@ -75,6 +76,7 @@ func (app *application) createBatchTasksHandler(w http.ResponseWriter, r *http.R
 //	@Success		200	{object}	store.Task			"The requested task"
 //	@Failure		404	{object}	map[string]string	"Task not found"
 //	@Failure		500	{object}	map[string]string	"Internal server error"
+//	@Security		ApiKeyAuth
 //	@Router			/tasks/{id} [get]
 func (app *application) getTaskHandler(w http.ResponseWriter, r *http.Request) {
 	task := getTaskFromCtx(r)
@@ -86,6 +88,7 @@ func (app *application) getTaskHandler(w http.ResponseWriter, r *http.Request) {
 }
 
 // CompleteTask godoc
+//
 //	@Summary		Complete a task
 //	@Description	Mark a task as completed
 //	@Tags			tasks
@@ -93,6 +96,7 @@ func (app *application) getTaskHandler(w http.ResponseWriter, r *http.Request) {
 //	@Success		204	"No content"
 //	@Failure		404	{object}	map[string]string	"Task not found"
 //	@Failure		500	{object}	map[string]string	"Internal server error"
+//	@Security		ApiKeyAuth
 //	@Router			/tasks/{id}/complete [patch]
 func (app *application) completeTaskHandler(w http.ResponseWriter, r *http.Request) {
 	task := getTaskFromCtx(r)
